cmake_minimum_required(VERSION 3.22.1)
project(LuoGu)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
add_executable(P8218 "Algorithm 2-1/P8218.cpp")
add_executable(P1719 "Algorithm 2-1/P1719.cpp")
add_executable(P1314 "Algorithm 2-1/P1314.cpp")
add_executable(P2367 "Algorithm 2-1/P2367.cpp")
add_executable(P3397 "Algorithm 2-1/P3397.cpp")
add_executable(P1496 "Algorithm 2-1/P1496.cpp")
add_executable(P1955 "Algorithm 2-1/P1955.cpp")
add_executable(P1884 "Algorithm 2-1/P1884.cpp")
